fix z-index bug

--- a/css/select.css
+++ b/css/select.css
@@ -2,6 +2,7 @@
   position: relative;
   width: auto;
   max-width: var(--custom-select-width);
+  z-index: 1;
 }
 
 .custom-select-value {
